--- a/test.ipynb
+++ b/test.ipynb
@@ -216,6 +216,55 @@
     },
     {
       "metadata": {
+        "id": "iI3O_iyvytOS",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "平滑化させずに二値化をしてネガポジ反転させてみる\n",
+        "よさそう"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "gJvXYxrHx57K",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 351
+        },
+        "outputId": "b1036c66-8853-4144-f0a9-1cfc9f149906"
+      },
+      "cell_type": "code",
+      "source": [
+        "gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+        "gray = 255 - gray\n",
+        "#gray = cv2.GaussianBlur(gray, (7, 7), 0)\n",
+        "im2 = cv2.threshold(gray, 140, 240, cv2.THRESH_BINARY_INV)[1]\n",
+        "\n",
+        "plt.axis(\"off\")\n",
+        "#plt.subplot(1, 2, 1)\n",
+        "plt.imshow(im2, cmap=\"gray\")\n",
+        "plt.show()"
+      ],
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAVgAAAFOCAYAAADD4wXGAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvNQv5yAAAC3JJREFUeJzt3dGO2zgSBVBrsf//y9onZz0ay90J\ncqvYrHOAYKZ7gJFDildlihKP8zzPBwB/3X+6PwDArgQsQIiABQgRsAAhAhYgRMAChAhYgBABCxAi\nYAFCBCxAiIAFCBGwACECFiBEwAKE/Lf7A3zHcRzdHwEY7k/e7KqCBQj5ERXs4/FnVw/+nue3CP3Q\nRx/0+dNv0SpYgBABCxAiYAFCBCxAiIAFCBGwACECFiBEwMIgnoqs9WMeNOD3fDWQKharr/AZ+Hc/\nvP6sD7IE7ACvg+g5uI7jKBtc745PjbunvzrOg4lMEWzqPM9ff66/r/4Md78Ttlmf2leo1hCwsDlh\n2kfAwqZ8U+gnYAc5jsMbmYa6u9HlPMhyk2uA1e4aG9x1zvP8xw2t638jSwU7zGsV23V8etytJCBH\nwA7wuqKgc15utUp6guu3hevKDiGbJWApIVzrfZqK0Qc1BCxxwnVNVhnkuclFlBta6xKseSpYYoTr\nGrwToo8KdlMrDaqVPssk1yVa725uafssATuQQTWHdbC9BOymVhg8K3wG9EMnc7AAIQIWIETAAoQI\nWIAQAQsQImABQgQsQIiABQgRsAAhAhYgRMAChAhYgBABCxAiYAFCBCxAiIAFCPHC7ZBP26R4AXKP\njm1SnAc9vruhY7oPVLBh53n++vNkN896HW1+3a7ceTCPCjbk3ZXx0yZ0ZKwQYtd+fj0PyPhqbFW1\nvwq2mFCt9a5yrPDdnXQF7d4ELAS5oK6nci5ewBazHz30qR5/AhYCTAHweAjYUqrXmd6FrOCt1zH+\nrCIoIlznua4aYR4BW0C4zvWpz4Vuna4xaIogzCDiHRfdGVSwQQYR9OschwI24PqIJLxy4Z1DwIZ5\n2Uevr+7gp/vgrv/1fY3ui5k5WCgmXOdQwQYYQOvo7ovu40/X3f4qWIAQAQsQImABQgQsQIiABQgR\nsAAhAhYgRMAChAhYgBABCxAiYAFCBCxAiIAFCBGwACECFiBEwAKEbP3Cbdt1QK/pY3DbCvbTvku2\n0oa8T+PsOI4R43DLCvbdRmfPf5/QqbCKu0p1yjjctoK9I2ihxpRpgE/GBSxAFQELECJggVKTpue2\nDth3HTmpc2FlE+Zot1xFcJ7nryAVqLCOdyt8drZtBXue57868d3vgBrTwvXx2LSCfTWpM2FVE8P1\n8di4gr0ztaOhy+Qxt30F+8p8LNT59Lj6FNsG7HEct09tTe1s6PKpuNl5PG4bsI+HYAV6bRuwwhR6\nGYMDb3IBVBGwACECFiBEwAKECFiAEAELECJgAUJ+zDpYj7muQT/00wc/x48JWIuWe01+Yccq9EGf\nP72omSIACBGwACECFiBEwAKECFiAEAELECJgAUIELEDIj3nQgN/znYXR1QvWLZTv9e6c0BdZKlhK\neLyzl/bvoYLdXHeFYmD3882hjwoWNiZce6lgiXod2KpZplHBwqbeVa/HcbjQFVLBbs6dY96dA6YO\naqhgB7gOIhXMPOd5/uPPk3MhS8Bu6jqYrj8bWHO8q1KFbA0BC0OZHsgTsAAhAhY2Zwqgj4CFTX01\nBWAlQZ6A3dRzveNr9fL6s0E1w91NTVVtDetgB7gOpspw/bQGs/qzTHWe5+0DBto/S8BuapWBs8rn\nmE4/9DBFABAiYAFCBCxAiIAFCBGwACECFiBEwAKECFiAEAELECJgAUIELECIgAUIEbAAIQIWIETA\nAoQIWIAQL9wOutuWw8uP63X1xXe2ZnE+ZHxq+6o2V8GGXLdFee1Q+yHV0t5cVZ0TKtiAuz2nnnsj\nUWeVTR67jz/RXZs/z4njOOL9ooINetd5d7t88vdpY96pvNgJWLaneqSLgGWMu62rmaVy2sgcLNu7\nhmrHvOy7YFdZ17m7L5Kmgg1SLfW5tv1zJUfXao7rsauPz/9VtrsKNuB1tYBB1OurG43pO8nX//f1\nJmfFnWwe/7qwVrW7CjbkXcXy7nfM5DzoU7mSR8CGvftqSp7lcKxAwBZbZeE7kCdgC6mm1tHdFy60\nWZ/6t7LvBWzI3dKgx8OgqnI3TVDVF8+bKa/Hsxa3zru2rh6HVhEEWfvY77mio7svuo8/WWfbC9gQ\ng2cdXX3hHOizStubIgAIEbAAIQIWIETAAoQIWIAQAQsQImABQgQsQIiABQgRsAAhAhYgRMAChAhY\ngBABCxAiYAFCBCxAiBdub+h3tiSpeDGxt/mvx55gNVSwRN2FvX2p+mj7OirYDX2nKqkYZHdVkgHe\nR9vXUsEOVPH18NMx7nZ7Jcu0QD0BCwMI1x4CdphVBlr38aGCOdiBhNscq1xQp1LBDtIx52kVAZOp\nYIeoDrTzPH8dU5j2UL32U8EOUznY7o51nqdBX0Q791LBDtBZydwdU1Vb46t2VuVmCVjY1KfQFKw1\nTBFsbsWBtOJnggQBSylTA0xiimBjK1SK3qTFZAJ2Y6sF2WqfZzJ9UUPAEmUgM5k5WIAQAQsQImAB\nQgQsQIiABQgRsAAhP2aZlieA1qAf+umDn+PHBGz3esrjONqfiOo+/uPR/1TY9OM/Hn19sMLfv/Pv\n/idMEXxTd8B3H38F3W3Qffxu3X//7uP/CQELECJgAUIELECIgAUIEbAAIQIWIETAAoT8mAcN+DOd\nW7Z8Z3H2T1zb+BNd+0K71xCwm/oUbt1P5FDn7jzofipsCgG7uXcD6DiO0pA1iPtd++AZsC62WeZg\nN2bgzPapSnVu1BCwACECdmNeawe9zMFu6jzPX3Ot1989/71K50oGvmYeNkcFO8hKd45V13W0dR8V\n7KbehWn1neNPx6heyTDR6zeWTyGrD3JUsBu7DpzzPH/9TlUzw114CtUaKtgNfTc8OyvI1+qKLGHa\nRwVLC+HKBAJ2MJXNXCvd8NyZgN3QKvOs12Vir79/PAzuCtq/lznYzd2FbPc6WOpYh9xHwG7q3fKs\n6++rPoNX5fW53kzU9rUE7ADdg6r7+NNp/z7mYAFCBCxAiIAFCBGwACECFiBEwAKECFiAEAELECJg\nAUIELECIgAUIEbAAIQIWIETAAoQIWICQbd8H+5236HtPJtSZuLPCtgELrGHylkHbB+zuV0hY2fTt\naszBAnETw/XxELBAiO3BBSxAzPZzsBPvXMJK7m5yTRiHIyvYyXc1oct5nv8I1QnjcNsK9u7q+OzU\n4zhGXEGh23WcPX8+jmP7cTiugt25M4G1jAtYgCoCFiBkXMBOmFgH1rBlwD4nz9/9/slcLGS93sy6\nmvIQwrarCB6P2evvYAXned4WPBPG4ZYBe7fWbkKHwmqeIfv68xRbBuyrSZ0Jq5o6DrecgwVYgYAF\nCBGwACECFiBEwAKECFiAEAELECJgAUIELECIgAUIEbAAIQIWIETAAoQIWICQ7V9X2OG729JMfYVb\ntc6XPX86F/R/rY4twgUs27p7yfPzDfvpwfbp+M9/CtkaXXvxCdiArwaNjRdrXfvjdRuTdMC9+/9f\n3/BPxgptLGDZ0gqb6qlOe13bvyNw3eQqtsLA5/OOp/C3CFgoJtTnMEVQSPVab5UbSddQXeEzkaeC\nLWZg1bjbuv35c3cV2X18aqhgixhQ9V7v1ne3/7sbLqtU1+QI2AKmBvp8avPO0K1cKkYfUwSM5KJH\nBQEb1v3VFOgjYIuolNaxQvW6wmcgzxxskOq13+sc5927AZLHvh7POdHDuwg2pkrp1bUG9dMqBudE\n3rtQrb7ICtggg6hfdx90H3+yFdreHCxAiIAFCBGwACECFiBEwAKECFiAkB+zTMsC7TXoh3764Of4\nEQG7wno2gN9ligAgRMAChAhYgBABCxAiYAFCBCxAiIAFCBGwACECFiBEwAKECFiAEAELECJgAUIE\nLECIgAUIEbAAIQIWIETAAoQIWIAQAQsQImABQgQsQIiABQgRsAAhAhYgRMAChAhYgJD/AaybvUKb\n5uicAAAAAElFTkSuQmCC\n",
+            "text/plain": [
+              "<matplotlib.figure.Figure at 0x7fa4dc3d9a90>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "metadata": {
         "id": "SZwFqaM9A2Ia",
         "colab_type": "text"
       },
