--- a/contours.ipynb
+++ b/contours.ipynb
@@ -31,7 +31,7 @@
       "metadata": {
         "id": "0OJejg3aw5g2",
         "colab_type": "code",
-        "outputId": "8a039be1-2f5f-4dbe-fd72-c0ba2b318741",
+        "outputId": "14f5c9ae-17c1-4880-935d-30c806c637b9",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -56,15 +56,15 @@
         "from google.colab import files\n",
         "upload = files.upload()"
       ],
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-b0351988-cdda-4d91-a561-5f8f8dc93baa\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-b0351988-cdda-4d91-a561-5f8f8dc93baa\">\n",
+              "     <input type=\"file\" id=\"files-6399b794-147e-422f-8252-d6608d771927\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-6399b794-147e-422f-8252-d6608d771927\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -94,14 +94,14 @@
       },
       "cell_type": "markdown",
       "source": [
-        "contours.py(ver.nomal)"
+        "contours.py(ver.nomal)から二値化追加"
       ]
     },
     {
       "metadata": {
         "id": "_03IFWITxAUu",
         "colab_type": "code",
-        "outputId": "eacbd67f-9010-4728-8daa-d1b03796479d",
+        "outputId": "1e1d6b4e-9bcc-4b3c-f1b7-6b1252cd24a6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 267
@@ -151,14 +151,14 @@
         "plt.imshow(cv2.cvtColor(img13, cv2.COLOR_BGR2RGB))\n",
         "plt.show()"
       ],
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPoAAAD6CAYAAACI7Fo9AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvNQv5yAAAC8pJREFUeJzt3V+IXGcZx/HvGi+aRhRFaGMMiCCP\nlvTGIjSFtBGL9U9tL1bbC4mlqajQgqLeqVjTC6VSK2rwppVqilCvtEGJkt4oqNBetFSQRwO2oBtI\noVRSkZDqeDGzMhuyO2dnzpw5s8/3A0Nnzs5mnp7Z3zzv+86ZMyuDwQBJO9vrFl2ApPkz6FIBBl0q\nwKBLBRh0qQCDLhXw+ml/MSIeBq4HBsDnM/Pp1qqS1Kqpgh4RNwHvysyDEfEe4EfAwS1+pfyb9Ssr\nK3N/jOeff55rr7127o/TlMdodG7TP7Jph+4fAH4OkJl/Bt4cEW+c8t9SSw4cOLDoEtRT0wb9auCl\nsdsvjbZJ6qGp5+iXmP+4dMl1NYx1uKzLmTboa2zs4G8Dzs5eTj91Mb9uw2AwWLpafWHqxrRD998A\nHweIiPcCa5l5vrWqJLVqZdpX1Ij4FnAj8F/g3sx8bou7L/XL9rJ1yWVgR5+LTZ/8qYO+TUv9bC5b\neJaBQZ+L1t9ek7RE2lp1X1pbdcBl6pDLqsn+tevPzo4uFWDQpQIMulRAuTm6c+7lc+lz5px9++zo\nUgEGXSrAoEsFlJuja/ldbp3FefvW7OhSAQZdKsCgSwUYdKkAF+O0I3hQzdbs6FIBBl0qwKBLBThH\n78hOPN1znz8g5Jx9Izu6VIBBlwow6FIBBl0qwMW4llRc7Jn0/9znxbpq7OhSAQZdKsCgSwU4R2+g\n4vy7DZfbb87bF8OOLhVg0KUCDLpUQLk5+nbn287PtRPY0aUCDLpUgEGXCmg0R4+IA8AvgIcz8wcR\nsR84AewCzgJHMvPC/MqUNIuJHT0i9gDfB54a23wMOJ6Zh4AzwNH5lKedZjAY/H+Bs+uz4Vx6qaTJ\n0P0C8BFgbWzbYeDJ0fWTwM3tliWpTROH7pn5GvBaRIxv3jM2VD8H7J1DbSrAty+70cb76LXGQGrV\nIofQlV5kpl11fzUido+u72PjsF5Sz0wb9NPA6uj6KnCqnXIkzcPKpOFLRFwHPAS8A7gI/AP4JPAY\ncAXwInB3Zl7c4p+pM0bStjh0b9WmO3Ni0Fuy4/ao2mHQW7Xpziz3oRbVtANDvS0eAisVYNClAgy6\nVIBBlwow6FIBBl0qwKBLBRh0qQCDrk6Nn/Sh2skfFsmgSwUYdKkAgy4VYNClAgy6VIBBlwow6FIB\nBl0qwDPMaG48TVR/2NGlAgy6VIBBlwpwjq7WOCfvLzu6VIBBlwow6FIBztHVSJ9OEuF8fPvs6FIB\nBl0qwKBLBRh0qQAX45bMVotig8GgV4tmbXHxbXZ2dKkAgy4V0GjoHhEPAodG9/8m8DRwAtgFnAWO\nZOaFeRUpaTYTO3pEvB84kJkHgQ8B3wWOAccz8xBwBjg61yqLWv9Wk/FLBYPBYMNFs2sydP8t8InR\n9VeAPcBh4MnRtpPAza1XJqk1E4fumfkf4F+jm/cAvwJuGRuqnwP2zqc8SW1o/PZaRNzOMOgfBP46\n9qMa48kFmGbYukxD3WWqddk1WnWPiFuArwAfzsx/Aq9GxO7Rj/cBa3Oqr7TLzdG3ukzzO4u6bFWr\n2tdkMe5NwLeBWzPz5dHm08Dq6PoqcGo+5WmZXbqodukC21Y/U7uaDN3vBN4K/Cwi1rfdBTwSEZ8F\nXgR+PJ/yJLVhpaNXUF+mp7DdYWzfDoG1O3du0yffI+OkAvxQi+bmcqMLu/xi2NGlAgy6VIBBlwpw\njq5Orc/bt/MOgfP62dnRpQIMulSAQZcKMOhSAS7GqfcuXbRzcW777OhSAQZdKsCgSwU4R++xPp1K\nqk8ff21Si/P4jezoUgEGXSrAoEsFOEdXI03mvH2ax2sjO7pUgEGXCjDoUgEGXSrAxTi1pk8Ldn4Q\nZiM7ulSAQZcKMOhSAc7RVUL1b42xo0sFGHSpAIMuFWDQ1anBYPD/uXGlOfKiGXSpAIMuFWDQpQIm\nvo8eEVcCjwFXAVcADwDPASeAXcBZ4EhmXphfmZJm0aSjfwx4JjNvAu4AvgMcA45n5iHgDHB0fiVK\nmtXEjp6ZT4zd3A/8HTgMfG607STwZeCHbRcnqR2ND4GNiN8DbwduBU6PDdXPAXvnUJsK8C22bjRe\njMvMG4DbgMeB8QOHPSOgpraysrKwSyUTgx4R10XEfoDMfJbhKOB8ROwe3WUfsDa/ErWTrR9AM37p\nSqXgN+noNwJfAoiIq4A3AKeB1dHPV4FTc6lOUitWJr2Cjjr3owwX4nYD3wCeAX7C8O22F4G7M/Pi\nFv+MEzE1tqjuugPWCzbdcROD3pKl34PqjkGf2qY7ziPjpAIMulSAQZcKMOhSAQZdKsCgSwUYdKkA\ngy4VYNClAgy6VIBBlwow6FIBBl0qwKBLBRh0qQCDLhVg0KUCDLpUQOPzukvzsMizr+6AU0c1ZkeX\nCjDoUgEGXSrAoEsFGHSpAIMuFWDQpQIMulSAQVenxr+ieKd/VXGfGHSpAIMuFWDQpQJ2/IdaJs0D\nK32wobLqz7MdXSrAoEsFNBq6R8Ru4E/AA8BTwAlgF3AWOJKZF+ZWoaSZNe3oXwVeHl0/BhzPzEPA\nGeDoPArryvr7upe7rP9c09lsn6p7E4MeEe8GrgF+Odp0GHhydP0kcPNcKpPUmiZD94eA+4C7Rrf3\njA3VzwF751FYW2Zdba2+WjuLSfvOfdudLYMeEZ8C/pCZf4uIy92l92OxWYaLg8GAlZUV/yCntNW+\nX9+3Xan+HE7q6B8F3hkRtwJvBy4Ar0bE7sz8N7APWJtzjZJmtGXQM/PO9esRcT/wAnADsAo8Pvrv\nqfmV1w9NOk/1jgH9Wrj0+dhomvfRvw7cFRG/A94C/LjdkiS1baWjV76Fvby2MUdvet/qtrOv5z1H\nL/p8bLpDPTJOKmDHf6ilK210p0V2oT7Nr9U+O7pUgEGXCjDoUgHO0Xtk1nly10eb9UnRVfbG7OhS\nAQZdKsCgSwUYdKkAF+O0dFx42z47ulSAQZcKMOhSAc7R1XvOyWdnR5cKMOhSAQZdKsCgSwXs+MW4\nSQs5VT/t1RcutHXDji4VYNClAgy6VMCOn6NPMs0XATqvb8YvWewPO7pUgEGXCjDoUgHl5+jTaGtu\nuUxzfefTy82OLhVg0KUCDLpUgEGXCljpaJHFlRxp/jZd3bWjSwUYdKkAgy4V0NUBM8tzZIi0A9nR\npQIMulSAQZcKMOhSAQZdKsCgSwV09nn0iHgYuJ7h4bCfz8ynu3rspiLiAPAL4OHM/EFE7AdOALuA\ns8CRzLywyBrHRcSDwCGGz+M3gafpYb0RcSXwGHAVcAXwAPAcPax1XUTsBv7EsNan6HGtTXTS0SPi\nJuBdmXkQuAf4XhePux0RsQf4PsMndd0x4HhmHgLOAEcXUdvlRMT7gQOjffoh4Lv0t96PAc9k5k3A\nHcB36G+t674KvDy63vdaJ+pq6P4B4OcAmfln4M0R8caOHrupC8BHgLWxbYeBJ0fXTwI3d1zTVn4L\nfGJ0/RVgDz2tNzOfyMwHRzf3A3+np7UCRMS7gWuAX442HaantTbVVdCvBl4au/3SaFtvZOZrmfnv\nSzbvGRuinQP2dlzWpjLzP5n5r9HNe4Bf0eN6ASLi98BPgS/Q71ofAr44drvPtTayqMW4ZTwktpc1\nR8TtDIN+3yU/6l29mXkDcBvwOBvr602tEfEp4A+Z+bdN7tKbWrejq6CvsbGDv43hokbfvTpalAHY\nx8Zh/cJFxC3AV4APZ+Y/6Wm9EXHdaGGTzHyW4eLh+T7WCnwUuD0i/gh8GvgaPd2v29FV0H8DfBwg\nIt4LrGXm+Y4eexangdXR9VXg1AJr2SAi3gR8G7g1M9cXjfpa743AlwAi4irgDfS01sy8MzPfl5nX\nA48wXHXvZa3b0dUZZoiIbzF8wv8L3JuZz3XywA1FxHUM52bvAC4C/wA+yfBtoSuAF4G7M/Pigkrc\nICI+A9wP/GVs810M/zh7Ve+oGz7KcCFuN/AN4BngJ/Ss1nERcT/wAvBrel7rJJ0FXdLieGScVIBB\nlwow6FIBBl0qwKBLBRh0qQCDLhVg0KUC/gcoz2Wijbw81AAAAABJRU5ErkJggg==\n",
             "text/plain": [
-              "<matplotlib.figure.Figure at 0x7f17021f85f8>"
+              "<matplotlib.figure.Figure at 0x7f1230977f28>"
             ]
           },
           "metadata": {
@@ -171,7 +171,7 @@
       "metadata": {
         "id": "9FYvjOeoQzdf",
         "colab_type": "code",
-        "outputId": "4024fae8-84fd-4b47-855d-91d0289b805d",
+        "outputId": "b6c78987-83fa-47fe-8b15-5f61d7378e25",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -181,7 +181,7 @@
       "source": [
         "cv2.imwrite(\"img13.png\", img13)"
       ],
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -193,7 +193,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 7
         }
       ]
     },
@@ -201,7 +201,7 @@
       "metadata": {
         "id": "ruWmUjYKZJBv",
         "colab_type": "code",
-        "outputId": "0af377ab-67ed-4079-f102-2801758380f7",
+        "outputId": "b14fcdd7-5205-4d81-a36c-6e8654a70a42",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 285
@@ -232,14 +232,14 @@
         "\n",
         "cv2.imwrite(\"img17.png\", img17)"
       ],
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPoAAAD6CAYAAACI7Fo9AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvNQv5yAAADJNJREFUeJzt3V+o5Hd5x/H3dHuRdUWxFOK6LkhB\nHisbEEMhCWyyYmj8E5uLo+ZC1pBNqYKCpfZOS+PmQonESHXpjZbohoK90izKVjY3FrSQXBgiyNMu\naEDPwgaCkogsGz29OLNlzuScM3Pm/H4z39953i84ZGbO2TNPvnM+83y/399vZkYbGxtIOtj+ZNUF\nSOqfQZcKMOhSAQZdKsCgSwUYdKmAP130H0bE48BtwAbwmcx8prOqJHVqoaBHxF3A2zPz9oj4S+Df\ngNt3+ScerB+Y0WjU6+9//vnnueWWW3q9j706AOeU7PigLTp1fy/wXYDM/Dnwpoh4w4K/SwWdOHFi\n1SWUsmjQ3wy8OHH9xfFtkhq08Bp9Sr/zPC3dMqaxB2CqPBiLBn2drR38LcCV/ZejZeh7/T2PjY2N\nJuqY1416h/rktOjU/YfAhwEi4t3Aema+3FlVkjo1WvQZKiK+BNwJ/BH4VGY+t8uPD/Np8IBqoZPa\n0Xux44AuHPQ9anp0qmkhYAa9F50fXpM0IF3tuqshQ+qUQzNrbFvt+HZ0qQCDLhVg0KUCXKMP3OSa\ncWg72QfRduPfwrrdji4VYNClAgy6VIBr9IFxDT4804/ZKtbsdnSpAIMuFWDQpQIMulSAm3ENa33j\nbb+bSn1uSrU8dqs4qcaOLhVg0KUCDLpUgGt0bauFF2Lsxzz1t7yO75odXSrAoEsFGHSpAIMuFeBm\nXENWuTk09M23RUz/P69y/Pt+hZsdXSrAoEsFGHSpANfo0lhLa/au2dGlAgy6VIBBlwpwjb5Cq1oD\nVjxmvojpcRryJ+HY0aUCDLpUgEGXCphrjR4RJ4DvAY9n5tcj4jhwHjgEXAFOZ+a1/sqUtB8zO3pE\nHAG+Bjw9cfNZ4FxmngQuA2f6KU+qaTQabfnar3mm7teADwDrE7edAp4aX74A3L3vSiT1ZubUPTNf\nBV6NiMmbj0xM1a8CR3uo7cDr4zCXh876NdTx7eI4+jAPLDag62Oy8x7nHeofawuGeu7Dorvur0TE\n4fHlY2yd1ktqzKJBvwSsjS+vARe7KUdSH0azpgQRcSvwGPA24Drwa+BjwBPATcALwIOZeX2XX+Nc\ncRtO3Yen8an7jsXNDHpH/MvahkEfnqEG3TPjpAIMulSAQZcKMOhSAQZdKsB3mJEa5Ce1SNozgy4V\nYNClAlyjF7Td2V2eLXew2dGlAgy6VIBBlwpwjb5CLX165/R9u2bfOiZD/pQWsKNLJRh0qQCDLhVg\n0KUC3IzTttycW66+x9eOLhVg0KUCDLpUgGv0hrR0As20Ci+EaWm8u2ZHlwow6FIBBl0qwDW6FjZr\nTdv6Gr7xj1fqlB1dKsCgSwUYdKkAgy4V4GZcw7bbtBnSSR271XrjHVuWtTG1ynFrYVPSji4VYNCl\nAuaaukfEo8DJ8c9/EXgGOA8cAq4ApzPzWl9FStqfmR09It4DnMjM24H3AV8FzgLnMvMkcBk402uV\n+n8bGxtbvoZuNBrt+WuR37ss049PK4/RPFP3HwEfGV/+DXAEOAU8Nb7tAnB355VJ6szMqXtm/gH4\n3fjqQ8APgHsmpupXgaP9lCepC3MfXouI+9gM+l8D/zvxreEc7zmApqeGrUwV59FnrX387iGN7bS5\ndt0j4h7gc8D7M/O3wCsRcXj87WPAek/1aYbpdegia95VfO2n1r2OyzLrbdU8m3FvBL4M3JuZL41v\nvgSsjS+vARf7KU+zTG/6tLoZ1KWWAjeUsZ5n6n4/8OfAf0TEjdseAL4REZ8AXgC+1U95krowWtKz\nULtPdQW0OKUc2ocW7lRvY118xwH1zDipAF/UUkDL7y7bsiEf0ZhmR5cKMOhSAQZdKsA1egGuyRcz\nOW7LfqOMrtnRpQIMulSAQZcKMOhSAW7GDdx2G0bqz6zxbXWzzo4uFWDQpQIMulSAa/SBWdUavK+3\nZjpoewqtvpTVji4VYNClAgy6VIBr9IZV+ATQRe5naOv66XpXsWa3o0sFGHSpAIMuFWDQpQLcjGtI\nhc23LsxTa8sbdqs4qcaOLhVg0KUCDLpUgGv0goa0Hl/U0NbxfZ9UY0eXCjDoUgEGXSrANfoKtbRG\nrKjlT5ntes1uR5cKMOhSAQZdKmDmGj0iXgc8AdwM3AQ8AjwHnAcOAVeA05l5rb8yJe3HPB39Q8Cz\nmXkX8FHgK8BZ4FxmngQuA2f6K1Fajo2NjS1fB8nMjp6Z35m4ehz4FXAK+OT4tgvAPwL/2nVxkrox\n9+G1iPgx8FbgXuDSxFT9KnC0h9oOvL7eK13dmB7LIY/t3EHPzDsi4l3Ak8DkQb52Dj4OTNfHbef9\nQIQh/8EuU0sfYNn7cfSIuDUijgNk5k/ZfHJ4OSIOj3/kGLC+ryoKGI1Gr/laloO89uzT9JgNeezm\n2Yy7E/gsQETcDLweuASsjb+/BlzspTpJnRjNepYad+5vsrkRdxj4AvAs8G02D7e9ADyYmdd3+TXD\nfSrsyDI6+E7TyyF3otY0/tl3OxY3M+gdKf+XZtAPhqEG3TPjpAJ89Zo0APudqdnRpQIMulSAQZcK\ncI0u7UHL70qzGzu6VIBBlwow6FIBBl0qwKBLBRh0qQCDLhVg0KUCDLpUgEGXCjDoUgEGXSrAoEsF\nGHSpAIMuFWDQpQIMulSAQZcKMOhSAQZdKsCgSwX4LrAFTL9TqZ/FtrjGP3ttR3Z0qQCDLhVg0KUC\nXKMvyXZrrKF8yoeGz44uFWDQpQLmmrpHxGHgZ8AjwNPAeeAQcAU4nZnXeqtQ0r7N29E/D7w0vnwW\nOJeZJ4HLwJk+ClN/RqPRa770WtPjM+Rxmhn0iHgH8E7g++ObTgFPjS9fAO7upTJJnZln6v4Y8Gng\ngfH1IxNT9avA0T4Kq6CPM9Q8660702M55LHdNegR8XHgJ5n5i4jY7keGO5dpQNdTwY2NjYV/55D/\niPsyOZb7Gdsu7PfxmdXRPwj8RUTcC7wVuAa8EhGHM/P3wDFgfV8VSOrdrkHPzPtvXI6Ih4FfAncA\na8CT4/9e7K+8g236WXqVHcMXvrS12db1+C9yHP2fgQci4r+APwO+1WlFkjo3WtIzd732sID9dpQu\n15F29K2WvUZfcPx3LNAz46QCfFGLtjVP9xpS129p/b2dvsfSji4VYNClAgy6VIBr9Ia0dFx9HrPq\nW+YavvWxmrSKvQ07ulSAQZcKMOhSAQZdKsDNuIYN/Z1jWzqldJVaOLHIji4VYNClAgy6VIBr9IEZ\n2kk11bSwHt+OHV0qwKBLBRh0qQCDLhXgZtzAzfMhA27Y9afVzbdpdnSpAIMuFWDQpQJcoxcwzzrS\ndfxrHaQPWbSjSwUYdKkAgy4V4BpdwOz159DX8ENeX3fBji4VYNClAgy6VIBBlwoYLWmTovZOiLQc\nO+6Y2tGlAgy6VIBBlwpY1gkzwz7bQho4O7pUgEGXCjDoUgEGXSrAoEsFGHSpgKW9Hj0iHgduY/N0\n2M9k5jPLuu95RcQJ4HvA45n59Yg4DpwHDgFXgNOZeW2VNU6KiEeBk2w+jl8EnqHBeiPidcATwM3A\nTcAjwHM0WOsNEXEY+BmbtT5Nw7XOYykdPSLuAt6embcDDwH/soz73YuIOAJ8jc0H9YazwLnMPAlc\nBs6sorbtRMR7gBPjMX0f8FXarfdDwLOZeRfwUeArtFvrDZ8HXhpfbr3WmZY1dX8v8F2AzPw58KaI\neMOS7nte14APAOsTt50CnhpfvgDcveSadvMj4CPjy78BjtBovZn5ncx8dHz1OPArGq0VICLeAbwT\n+P74plM0Wuu8lhX0NwMvTlx/cXxbMzLz1cz8/dTNRyamaFeBo0sua0eZ+YfM/N346kPAD2i4XoCI\n+DHw78Df03atjwH/MHG95VrnsqrNuCGeEttkzRFxH5tB//TUt5qrNzPvAP4GeJKt9TVTa0R8HPhJ\nZv5ihx9ppta9WFbQ19nawd/C5qZG614Zb8oAHGPrtH7lIuIe4HPA+zPztzRab0TcOt7YJDN/yubm\n4cst1gp8ELgvIv4b+Fvgn2h0XPdiWUH/IfBhgIh4N7CemS8v6b734xKwNr68BlxcYS1bRMQbgS8D\n92bmjU2jVuu9E/gsQETcDLyeRmvNzPsz868y8zbgG2zuujdZ614s6x1miIgvsfmA/xH4VGY+t5Q7\nnlNE3Mrm2uxtwHXg18DH2DwsdBPwAvBgZl5fUYlbRMTfAQ8D/zNx8wNs/nE2Ve+4G36TzY24w8AX\ngGeBb9NYrZMi4mHgl8B/0nitsywt6JJWxzPjpAIMulSAQZcKMOhSAQZdKsCgSwUYdKkAgy4V8H8h\nOg4dB+1IRAAAAABJRU5ErkJggg==\n",
             "text/plain": [
-              "<matplotlib.figure.Figure at 0x7f1704a98908>"
+              "<matplotlib.figure.Figure at 0x7f1230c8ba90>"
             ]
           },
           "metadata": {
@@ -256,7 +256,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 8
         }
       ]
     },
@@ -264,7 +264,7 @@
       "metadata": {
         "id": "ec2t4FsLbAYK",
         "colab_type": "code",
-        "outputId": "4d2a2413-b30e-487b-e752-8a2c3a7c1d29",
+        "outputId": "6d6ba3d9-824c-4dd1-9f31-f895291fa699",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 285
@@ -295,14 +295,14 @@
         "\n",
         "cv2.imwrite(\"img25.png\", img25)"
       ],
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPoAAAD6CAYAAACI7Fo9AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvNQv5yAAACk1JREFUeJzt3V2IXIUZgOF3Gi+MEcVS0BgDUpDP\nildKQYWYiFL/9WL9uZAoxtIWLFi0d1qq8UJR/KEaeqNFjRTslRqUVOKNBS0kFxUE+dqACrqBCKJE\nkSXq9GImMJGd3cnsmdkz+d4HFmfOzJ793JN3z5kzM7udbreLpOPbT1Z7AEmTZ+hSAYYuFWDoUgGG\nLhVg6FIBJ4z7iRHxFHAR0AXuycy9jU0lqVFjhR4Rm4FzMvPiiPgF8Dfg4iU+xSfrpcnrDLth3EP3\ny4FXATLzQ+C0iDhlzHVJmrBxQz8D+Hzg+uf9ZZJaqKmTcUMPGSStvnFPxs1z9B78TODAysfRLOl0\nxv/53u12h36+779o3rh79LeAmwAi4gJgPjMPNTaVpEZ1xv3pGRGPApcCPwB3Z+b7S9zdH9HHIffo\nrTN0g4wd+jFyyx2HDL11Gn96TdIMMXSpAEOXCjB0qQBDlwoY+91rqmUlZ9i1+tyjSwUYulSAoUsF\nGLpUgKFLBRi6VIChSwUYulSAL5jRonyBzPHFPbpUgKFLBRi6VICP0Qvy8Xc97tGlAgxdKsDQpQIM\nXSrAk3GrqOmTYkv9rnTV5h5dKsDQpQIMXSrA0KUCDF0qwNClAgxdKsDQpQIMXSrA0KUCDF0qYKTX\nukfE+cBrwFOZ+WxEbAR2AmuAA8DWzFyY3JiSVmLZPXpErAOeAd4eWLwd2JGZm4D9wLbJjCepCaMc\nui8A1wDzA8u2AK/3L+8Crmh2LElNWvbQPTO/A76LiMHF6wYO1Q8C6ycw23Gv2+3OxDonZZZmnXVN\nvB/dN0CPqfL70Zea1R8AzRv3rPvXEbG2f3kDRx/WS2qZcUPfA8z1L88Bu5sZR9IkdJY7TIqIC4En\ngLOBw8BnwG3AC8CJwCfAnZl5eInVeCy2CA/dPXRv2NCNv2zoDXHLLcLQDb1hQze+vxxyFc3SWfdZ\n+QGixfkSWKkAQ5cKMHSpAEOXCjB0qQBDlwowdKkAQ5cKMHSpAEOXCjB0qQBDlwowdKkAQ5cKMHSp\nAEOXCjB0qQBDlwowdKkAQ5cKMHSpAEOXCjB0qQBDlwowdKkAQ5cKMHSpAEOXCjB0qQBDlwowdKkA\nQ5cKMHSpgBNGuVNEPAZs6t//EWAvsBNYAxwAtmbmwqSGlLQyy+7RI+Iy4PzMvBi4Cnga2A7syMxN\nwH5g20SnlLQioxy6vwPc3L/8JbAO2AK83l+2C7ii8ckkNWbZQ/fM/B74pn/1LuBN4MqBQ/WDwPrJ\njCepCSM9RgeIiBvphf4r4H8DN3WaHkrt0+12Z2KdWtxIZ90j4krgfuDqzPwK+Doi1vZv3gDMT2g+\ntUSn02n0Y6l1qnmjnIw7FXgcuC4zv+gv3gPM9S/PAbsnM56kJoxy6H4r8DPgHxFxZNkdwHMR8Vvg\nE+DFyYwnqQmdKT1O8sHYjGv6kLrb7Q5dp4/dxzZ0I/nKOKkAQ5cKMHSpAEOXCjB0qQBDlwowdKkA\nQ5cKMHSpAEOXCjB0qQBDlwowdKkAQ5cKMHSpAEOXCjB0qQBDlwowdKkAQ5cKMHSpAEOXCjB0qQBD\nlwowdKkAQ5cKMHSpAEOXCjB0qQBDlwowdKkAQ5cKMHSpAEOXCjB0qYATlrtDRJwEvACcDpwIPAy8\nD+wE1gAHgK2ZuTC5MSWtxCh79OuBfZm5GbgFeBLYDuzIzE3AfmDb5EaUtFLL7tEz85WBqxuBT4Et\nwO/6y3YBfwT+2vRwkpqxbOhHRMS7wFnAdcCegUP1g8D6CcymFul2uzOxTi1u5JNxmXkJcAPwMtAZ\nuKmz+GfoeNLpdBr9WGqdat6yoUfEhRGxESAz/0PvKOBQRKzt32UDMD+5ESWt1Ch79EuB+wAi4nTg\nZGAPMNe/fQ7YPZHpJDWis9zjpP6e+3l6J+LWAg8B+4CX6D3d9glwZ2YeXmI1PhibcU0fUne73aHr\n9LH72IZupGVDb4hbbsYZ+kwYupF8ZZxUgKFLBRi6VIChSwUYulSAoUsFGLpUgKFLBRi6VIChSwUY\nulSAoUsFGLpUgKFLBRi6VIChSwUYulSAoUsFGLpUgKFLBRi6VIChSwUYulSAoUsFGLpUgKFLBRi6\nVIChSwUYulSAoUsFGLpUgKFLBRi6VIChSwWcMMqdImIt8AHwMPA2sBNYAxwAtmbmwsQmlLRio+7R\nHwC+6F/eDuzIzE3AfmDbJAaT1JxlQ4+Ic4HzgDf6i7YAr/cv7wKumMhkkhozyh79CeDegevrBg7V\nDwLrG59KrdPtdhv9WGqdat6SoUfE7cB7mfnRkLt0mh9JbdTpdBr9WGqdat5yJ+OuBX4eEdcBZwEL\nwNcRsTYzvwU2APMTnlHSCi0ZembeeuRyRDwIfAxcAswBL/f/u3ty40lqwjjPo/8ZuCMi/gX8FHix\n2ZEkNa0zpZMfnmGZcU0/du52u0PX6Qm5sQ3dSL4yTirA0KUCDF0qwNClAgxdKmCkd69pMqZ5JnuW\ntPH/Ydj3dlaeIXCPLhVg6FIBhi4VYOhSAYYuFWDoUgGGLhVg6FIBhi4VYOhSAYYuFWDoUgGGLhVg\n6FIBhi4VYOhSAYYuFWDoUgGGLhVg6FIBhi4V4N9ek44f/u01qTJDlwowdKkAQ5cKMHSpAEOXCjB0\nqQBDlwqY1p9Nbt/fwZUKcY8uFWDoUgGGLhVg6FIBhi4VYOhSAdN6eo2IeAq4iN570+/JzL3T+tqj\niojzgdeApzLz2YjYCOwE1gAHgK2ZubCaMw6KiMeATfS24yPAXlo4b0ScBLwAnA6cCDwMvE8LZz0i\nItYCH9Cb9W1aPOsoprJHj4jNwDmZeTFwF/CXaXzdYxER64Bn6G3UI7YDOzJzE7Af2LYasy0mIi4D\nzu9/T68Cnqa9814P7MvMzcAtwJO0d9YjHgC+6F9u+6zLmtah++XAqwCZ+SFwWkScMqWvPaoF4Bpg\nfmDZFuD1/uVdwBVTnmkp7wA39y9/CayjpfNm5iuZ+Vj/6kbgU1o6K0BEnAucB7zRX7SFls46qmmF\nfgbw+cD1z/vLWiMzv8vMb3+0eN3AIdpBYP2UxxoqM7/PzG/6V+8C3qTF8wJExLvA34E/0O5ZnwDu\nHbje5llHslon42bxJbGtnDkibqQX+u9/dFPr5s3MS4AbgJc5er7WzBoRtwPvZeZHQ+7SmlmPxbRC\nn+foPfiZ9E5qtN3X/ZMyABs4+rB+1UXElcD9wNWZ+RUtnTciLuyf2CQz/0Pv5OGhNs4KXAvcGBH/\nBn4N/ImWfl+PxbRCfwu4CSAiLgDmM/PQlL72SuwB5vqX54DdqzjLUSLiVOBx4LrMPHLSqK3zXgrc\nBxARpwMn09JZM/PWzPxlZl4EPEfvrHsrZz0W0/p1z0TEo/Q2+A/A3Zn5/lS+8Igi4kJ6j83OBg4D\nnwG30Xta6ETgE+DOzDy8SiMeJSJ+AzwI/Hdg8R30/nG2at7+3vB5eifi1gIPAfuAl2jZrIMi4kHg\nY+CftHzW5UwtdEmrx1fGSQUYulSAoUsFGLpUgKFLBRi6VIChSwUYulTA/wGlh8fFSkdtFAAAAABJ\nRU5ErkJggg==\n",
             "text/plain": [
-              "<matplotlib.figure.Figure at 0x7f170212fc88>"
+              "<matplotlib.figure.Figure at 0x7f1230c8b9b0>"
             ]
           },
           "metadata": {
@@ -319,7 +319,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 9
         }
       ]
     }
