--- a/contours.ipynb
+++ b/contours.ipynb
@@ -440,6 +440,46 @@
           }
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "CXhs31qb3LWj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 269
+        },
+        "outputId": "afa82ffc-ba3d-41ac-8405-7ec6984722e6"
+      },
+      "cell_type": "code",
+      "source": [
+        "#白い余白を追加\n",
+        "newimg = Image.open(\"img17.png\")\n",
+        "imgwhite = Image.open('white50.png')\n",
+        "imgwhite.paste(newimg, (25, 25))\n",
+        "imgwhite.save('img17a.png', quality=95)\n",
+        "\n",
+        "\n",
+        "#plt.axis(\"off\")\n",
+        "img17a = cv2.imread(\"img17a.png\")\n",
+        "plt.imshow(cv2.cvtColor(img17a, cv2.COLOR_BGR2RGB))\n",
+        "plt.show()"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPoAAAD7CAYAAABDsImYAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvNQv5yAAAC/1JREFUeJzt3V2oHHcZx/HvtgUbUywxQo0Rq6I8\nIl4J0tY2mrbBWgwEm4oXtdY2UhGFQhFvtDZWQVHEKhQRRLHthZeSoMQSESr4Qq5ahPJoROtFYlNp\nlVOR0Op6sRPYHM7Lnt2Z3Tn7fD9wyO7sZOfZw/nt85//zM4OhsMhkpbbJYsuQFL3DLpUgEGXCjDo\nUgEGXSrAoEsFXDbtf4yIbwPXAkPgvsw81VpVklo1VUePiPcDb8/M64AjwHdbrUpSq6Ydut8M/BQg\nM58BdkXEazZYf+iPP/50/rOuaYP+euD5sfvPN8sk9VBbk3GDlp5HUgemDfoZLu7gbwDOzl6OpC5M\nG/QngNsBIuLdwJnMXGmtKkmtGkz76bWI+DrwPuB/wGcy86kNVp9uI5K2Yt1d6KmDvkUGXereukH3\nzDipAIMuFWDQpQIMulSAQZcKMOhSAQZdKsCgSwUYdKkAgy4VYNClAgy6VIBBlwow6FIBBl0qwKBL\nBRh0qQCDLhVg0KUCDLpUgEGXCjDoUgEGXSrAoEsFGHSpAIMuFWDQpQIMulSAQZcKMOhSAQZdKsCg\nSwUYdKkAgy4VYNClAi6bZKWI+Aawr1n/a8Ap4DHgUuAscGdmnu+qSEmz2bSjR8SNwLsy8zrgg8DD\nwEPAI5m5DzgN3NNplZJmMsnQ/UngI83tfwI7gf3AsWbZceBA65VJas2mQ/fM/C/w7+buEeDnwC1j\nQ/VzwJ5uypPUhon20QEi4hCjoH8A+NPYQ4O2i5LUrolm3SPiFuALwK2Z+S/gpYjY0Ty8FzjTUX2S\nWjDJZNyVwDeBg5n5QrP4JHC4uX0YONFNeZLaMBgOhxuuEBH3AkeBP44tvgv4AXA58Cxwd2a+vMHT\nbLwRSW1Ydzd606C3xKBL3Vs36J4ZJxVg0KUCDLpUwMTH0VXLYNDd6RHD4XDD55/TvFEpdnSpAIMu\nFeDQXUC3Q/WtWl2LQ/nZ2dGlAuzoBfWpe0/CDj87O7pUgB29kO3Wyddz4XXY2SdnR5cKsKMXsCyd\nfLXx12V335gdXSrAjr7E2uzkfe+Y7rdvzI4uFWDQpQIcumtNXQ+BVz//sk4Y9oUdXSrAa8YtoVm6\nYx8ms9ro7n14HQvgNeOkygy6emc4HFbtyJ0x6FIBzrovke2+b77ahZqckZ+dHV0qwKBrKQ0GA0cC\nYwy6VIBBlwow6FIBBl0qwKBLBRh0qQBPmNFS6uMJQItkR5cKmKijR8QO4A/AV4BfAo8BlwJngTsz\n83xnFWouvObacpu0o38ReKG5/RDwSGbuA04D93RRmKT2bBr0iHgH8E7gZ82i/cCx5vZx4EAnlWnL\n2vh4Z59OHe1TLdvdJEP3bwGfBe5q7u8cG6qfA/Z0UZimtyzD72V5HX2wYUePiI8Dv83Mv6yzim+3\nPXShE7bxs91eh9a2WUf/EPDWiDgIvBE4D7wUETsy8z/AXuBMxzVKmtGGQc/Mj164HRFHgb8C7wUO\nA483/57orjxJbZjmOPqDwF0R8WvgtcCP2y1Js2rzmmuLGBI7DG+fl3teYtv1u9eW7ZJYc7TuL85T\nYDWRtcLXZqhmfVMqHvBNeQqsVIBD9wLmtb87zd+Sw/RW+U0tUmV29EIWOZPd5ren2snXZUeXKnPW\nvZBFfif5+Lam7ch28unZ0aUC7OiFjXfIPp6JZgdvjx1dKsCgSwU4dC+sj8P1cV7Hrj12dKkAO3oh\nfe/g61ldtx1+6+zoUgF29ALmdbrpvEYM7rtvnR1dKsCOvsTm/cGRjf5PF92+jdNqq7CjSwXY0ZdQ\nHz8C2nXHdb99Y3Z0qQCDLhXg0F3A/Ie8XX023iH82uzoUgF29CWyXU9xhfY/G29nv5gdXSrAoKt3\n2vzuOI0YdKkA99G3uVn2RfveNS/Ut53nHvrCji4VYNC11Pyu9RGDLhVg0NV7zsLPzqBLBRh0qYCJ\nDq9FxB3A54FXgC8BTwOPAZcCZ4E7M/N8V0VKms2mHT0idgMPAjcAB4FDwEPAI5m5DzgN3NNlkZJm\nM8nQ/QBwMjNXMvNsZt4L7AeONY8fb9aR1FOTDN3fDLw6Io4Bu4CjwM6xofo5YE8n1WlT47PRyz4z\nveyvr0uTBH0A7AY+DFwN/KpZNv64FmT8FNitnhiy3YLTx2vhbReTDN2fA36Tma9k5p+BFWAlInY0\nj+8FznRVoKTZTRL0J4CbIuKSZmLuCuAkcLh5/DBwoqP6JLVgMMmQJiI+BRxp7n4VOAU8ClwOPAvc\nnZkvb/AUtcdNHXLoPpnt9lqntO4vaKKgt6DEb3kRZgn6uD4HYVlfVwfW/UV5ZpxUgEGXCvAKM9tc\nsaGppmRHlwqwowvo53XQvTJMe+zoUgEeXltCbXTCRXb27V7/Anl4TarMfXStaXVX7apDtr0fXrST\nb8qOLhXgPvoS63rWepq/ncFgMPPpum3VsoTcR5cqcx99iXX93WWLPs5tF5+cHV0qwKBLBTh0L2DZ\nvn7YIfvW2dGlAuzohazuhNutw9vJp2dHlwqwoxe2VofsU5e3g7fHji4VYEfXRea9H2/Xng87ulSA\nH2qRlocfapEqM+hSAQZdKsCgSwUYdKkAgy4VYNClAgy6VIBBlwow6FIBm36oJSKuAB4FdgGvAr4M\n/B34HqNTW5/OzE93WaSk2UzS0T8BZGbeCNwOfAd4GLgvM68HroyIW7srUdKsJgn6P4Ddze1dwAvA\nWzLzVLPsOHCgg9oktWTToGfmT4A3RcRp4Engc8CLY6ucA/Z0U56kNmwa9Ij4GPC3zHwbcBPw+KpV\n+nPtIUlrmmTofj3wC4DMfArYAbxu7PG9wJn2S5PUlkmCfhq4BiAirgZWgGci4obm8duAE92UJ6kN\nm15hpjm89kPgKkaH4x5gdHjt+4zeKH6fmfdvsh2vMCN1b93daC8lJS0PLyUlVWbQpQIMulSAQZcK\nMOhSAQZdKsCgSwUYdKkAgy4VYNClAgy6VIBBlwow6FIBBl0qwKBLBRh0qQCDLhVg0KUCDLpUgEGX\nCjDoUgEGXSrAoEsFGHSpAIMuFWDQpQIMulSAQZcKMOhSAQZdKsCgSwUYdKkAgy4VYNClAgy6VIBB\nlwow6FIBl81pO4M5bUfSGuzoUgEGXSrAoEsFGHSpAIMuFWDQpQIMulTAXI6jR8S3gWuBIXBfZp6a\nx3a3IiK+Aexj9Dv5GnAKeAy4FDgL3JmZ5xdX4cUiYgfwB+ArwC/pd613AJ8HXgG+BDxND+uNiCuA\nR4FdwKuALwN/B77H6G/36cz89OIqnF7nHT0i3g+8PTOvA44A3+16m1sVETcC72pq/CDwMPAQ8Ehm\n7gNOA/cssMS1fBF4obnd21ojYjfwIHADcBA4RH/r/QSQmXkjcDvwHUZ/C/dl5vXAlRFx6wLrm9o8\nhu43Az8FyMxngF0R8Zo5bHcrngQ+0tz+J7AT2A8ca5YdBw7Mv6y1RcQ7gHcCP2sW7aentTKq5WRm\nrmTm2cy8l/7W+w9gd3N7F6M30reMjUD7VOuWzCPorweeH7v/fLOsNzLzv5n57+buEeDnwM6x4eQ5\nYM9Cilvbt4D7x+73udY3A6+OiGMR8euIuJme1puZPwHeFBGnGb35fw54cWyV3tS6VYuYjOvtee8R\ncYhR0D+76qHe1BwRHwd+m5l/WWeV3tTaGDDqkrcxGhr/iItr7E29EfEx4G+Z+TbgJuDxVav0ptat\nmkfQz3BxB38DowmYXomIW4AvALdm5r+Al5oJL4C9jF5HH3wIOBQRvwM+CTxAf2sFeA74TWa+kpl/\nBlaAlZ7Wez3wC4DMfArYAbxu7PE+1bol8wj6E4wmNoiIdwNnMnNlDtudWERcCXwTOJiZFya4TgKH\nm9uHgROLqG21zPxoZr4nM68FfsBo1r2XtTaeAG6KiEuaibkr6G+9p4FrACLiakZvSs9ExA3N47fR\nn1q3ZDAcDjvfSER8HXgf8D/gM827ZW9ExL3AUeCPY4vvYhSky4Fngbsz8+X5V7e+iDgK/JVRF3qU\nntYaEZ9itEsE8FVGhy57V29zeO2HwFWMDrM+wOjw2vcZNcXfZ+b96z9Df80l6JIWyzPjpAIMulSA\nQZcKMOhSAQZdKsCgSwUYdKmA/wOIqyzLpwwZXwAAAABJRU5ErkJggg==\n",
+            "text/plain": [
+              "<matplotlib.figure.Figure at 0x7f5bb369ee80>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     }
   ]
 }
