--- a/tesseract_ocr.ipynb
+++ b/tesseract_ocr.ipynb
@@ -526,15 +526,15 @@
       "metadata": {
         "id": "K0rVmbULXNxZ",
         "colab_type": "code",
-        "outputId": "65a2b0f8-6414-4ef5-fe2c-8e1e89d8eeaa",
+        "outputId": "e9738063-7da8-4744-f47d-64d0ed9aeda1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 339
+          "height": 341
         }
       },
       "cell_type": "code",
       "source": [
-        "filenameex = \"img25.png\"\n",
+        "filenameex = \"img25a.png\"\n",
         "\n",
         "img = cv2.imread(filenameex)\n",
         "img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
@@ -549,7 +549,7 @@
         ")\n",
         "print(\"predict answer: \", txt)"
       ],
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -561,9 +561,9 @@
         {
           "output_type": "display_data",
           "data": {
-            "image/png": "iVBORw0KGgoAAAANSUhEUgAAATAAAAEwCAYAAAAw+y3zAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvNQv5yAAABFlJREFUeJzt3UFywjAQAMEo5f9/WXkBh9hGYkz3\nlQNbHKa2ZARjzvkDUPS7ewCAswQMyBIwIEvAgCwBA7IEDMgSMCDrWPQ+vmwGnDVevWADA7IEDMgS\nMCBLwICsVYf4cIsxXp7n3s4PHXw+GxiQJWBAloABWQIGZAkYkCVgQJaAAVkCBmQJGJAlYECWq0R8\npJVXhuiygQFZAgZkCRiQJWBAloABWQIGZAkYkCVgQJaAAVkCBmS5SsR2rg1xlg0MyBIwIEvAgCwB\nA7IEDMjyFJK38GSRFWxgQJaAAVkCBmQJGJDlED/OYTnfzAYGZAkYkCVgQJaAAVkCBmQJGJAlYECW\ngAFZAgZkCRiQJWBAloABWQIGZAkYkCVgQJaAAVkCBmQJGJAlYECWgAFZAgZkCRiQJWBAloABWQIG\nZAkYkHXsHoBr5py7R3iLMcbuEQiwgQFZAgZkCRiQJWBAloABWQIGZAkYkCVgQJaAAVkCBmQJGJAl\nYECWgAFZAgZkCRiQJWBAloABWQIGZAkYkCVgQJaAAVkCBmQJGJAlYECWgAFZAgZkCRiQJWBAloAB\nWQIGZAkYkCVgQJaAAVkCBmQJGJAlYECWgAFZAgZkCRiQJWBAloABWQIGZAkYkCVgQJaAAVkCBmQJ\nGJAlYECWgAFZAgZkCRiQJWBAloABWQIGZAkYkCVgQJaAAVkCBmQJGJAlYECWgAFZAgZkCRiQJWBA\nloABWQIGZAkYkCVgQJaAAVkCBmQJGJAlYECWgAFZAgZkCRiQJWBAloABWQIGZAkYkCVgQJaAAVkC\nBmQJGJAlYECWgAFZAgZkCRiQJWBAloABWQIGZAkYkCVgQJaAAVkCBmQJGJAlYECWgAFZAgZkCRiQ\nJWBAloABWQIGZAkYkCVgQJaAAVkCBmQJGJAlYECWgAFZAgZkCRiQJWBAloABWQIGZAkYkCVgQJaA\nAVkCBmQJGJAlYECWgAFZAgZkCRiQJWBAloABWQIGZAkYkCVgQJaAAVkCBmQJGJAlYECWgAFZAgZk\nCRiQJWBAloABWQIGZAkYkCVgQJaAAVkCBmQJGJAlYECWgAFZAgZkCRiQJWBAloABWQIGZAkYkCVg\nQJaAAVkCBmQJGJAlYECWgAFZAgZkCRiQJWBAloABWQIGZAkYkCVgQJaAAVkCBmQJGJAlYEDWsXsA\nrhlj7B7hsZ762c45d49wGxsYkCVgQJaAAVkCBmQJGJAlYECWgAFZAgZkCRiQJWBAloABWQIGZAkY\nkCVgQJaAAVkCBmQJGJAlYECWgAFZAgZkCRiQJWBAloABWQIGZAkYkCVgQNaxewCuedLfxMN/2cCA\nLAEDsgQMyBIwIEvAgCwBA7IEDMgSMCBLwIAsAQOyVl0lGoveB/giNjAgS8CALAEDsgQMyBIwIEvA\ngCwBA7IEDMgSMCBLwIAsAQOyBAzIEjAgS8CALAEDsgQMyBIwIEvAgCwBA7IEDMgSMCBLwIAsAQOy\n/gAu5BJ+iW3q9QAAAABJRU5ErkJggg==\n",
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAATAAAAExCAYAAAD7p/5WAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvNQv5yAAABFRJREFUeJzt3EFqw0AQAMFs0P+/PPmAgxJhVmpc\ndTVm59SMZLNrZr4Air7vHgDgKgEDsgQMyBIwIEvAgCwBA7IEDMgSMCDr2HSOf8sCV63fPrCBAVkC\nBmQJGJAlYECWgAFZAgZkCRiQJWBAloABWQIGZAkYkCVgQJaAAVkCBmQJGJAlYECWgAFZAgZkCRiQ\nJWBAloABWQIGZAkYkCVgQJaAAVkCBmQJGJAlYECWgAFZAgZkCRiQJWBAloABWQIGZAkYkCVgQJaA\nAVkCBmQJGJAlYECWgAFZAgZkCRiQJWBAloABWQIGZAkYkCVgQJaAAVkCBmQJGJAlYECWgAFZAgZk\nCRiQJWBAloABWQIGZAkYkCVgQJaAAVkCBmQJGJAlYECWgAFZAgZkCRiQJWBAloABWQIGZB13DwCv\nrLUufW9m3jwJT2YDA7IEDMgSMCBLwIAsL/F5lKsv7/lMNjAgS8CALAEDsgQMyBIwIMuvkNzOL49c\nZQMDsmxgbGXb4p1sYECWgAFZHiE55bGPp7KBAVkCBmQJGJAlYECWgAFZAgZkCRiQJWBAloABWQIG\nZAkYkCVgQJaAAVluo+DUzGw7y80X/IcNDMgSMCBLwIAsAQOyBAzIEjAgS8CALAEDsgQMyBIwIEvA\ngCwBA7IEDMgSMCBLwIAsAQOyBAzIEjAgS8CALAEDsgQMyBIwIEvAgCwBA7IEDMgSMCBLwIAsAQOy\nBAzIEjAgS8CALAEDsgQMyBIwIEvAgCwBA7IEDMgSMCBLwIAsAQOyBAzIEjAgS8CALAEDsgQMyBIw\nIEvAgCwBA7IEDMgSMCBLwIAsAQOyBAzIEjAgS8CALAEDsgQMyBIwIEvAgCwBA7IEDMgSMCBLwIAs\nAQOyBAzIEjAgS8CALAEDsgQMyBIwIEvAgCwBA7IEDMgSMCBLwIAsAQOyBAzIEjAgS8CALAEDsgQM\nyBIwIEvAgKzj7gF4vrXW3SP82c5ZZ2bbWbxmAwOyBAzIEjAgS8CALAEDsgQMyBIwIEvAgCwBA7IE\nDMgSMCBLwIAsAQOy3EbBKbcu8FQ2MCBLwIAsAQOyBAzIEjAgS8CALAEDsgQMyBIwIEvAgCwBA7IE\nDMgSMCBLwIAsAQOyBAzIEjAgS8CALAEDsgQMyBIwIEvAgCwBA7IEDMgSMCBLwIAsAQOyBAzIEjAg\nS8CALAEDsgQMyBIwIEvAgCwBA7IEDMgSMCBLwIAsAQOyBAzIEjAgS8CALAEDsgQMyBIwIEvAgCwB\nA7IEDMgSMCBLwIAsAQOyBAzIEjAgS8CALAEDsgQMyBIwIEvAgCwBA7IEDMgSMCBLwIAsAQOyBAzI\nEjAgS8CALAEDsgQMyBIwIEvAgCwBA7IEDMg6Np2zNp0DfBAbGJAlYECWgAFZAgZkCRiQJWBAloAB\nWQIGZAkYkCVgQJaAAVkCBmQJGJAlYECWgAFZAgZkCRiQJWBAloABWQIGZAkYkCVgQJaAAVk/ch0S\ngOMjQAQAAAAASUVORK5CYII=\n",
             "text/plain": [
-              "<matplotlib.figure.Figure at 0x7f2242598898>"
+              "<matplotlib.figure.Figure at 0x7f22424c1978>"
             ]
           },
           "metadata": {
