Update_check.ipynb

--- a/roop_check.ipynb
+++ b/roop_check.ipynb
@@ -164,10 +164,6 @@
         "\n",
         "img = cv2.imread(\"sudoku.png\")\n",
         "\n",
-        "height, width = img.shape[:2]\n",
-        "#width: 1236\n",
-        "#height: 1242\n",
-        "\n",
         "gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
         "\n",
         "cnts = cv2.findContours(gray, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)[1]\n",
@@ -506,14 +502,67 @@
       "metadata": {
         "id": "d3i8LiaQLfRa",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 247
+        },
+        "outputId": "4e1caf34-83f3-46a4-c7f5-c3f23953e548"
       },
       "cell_type": "code",
       "source": [
-        ""
+        "import cv2\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "img = cv2.imread(\"sudoku.png\")\n",
+        "\n",
+        "\n",
+        "gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+        "\n",
+        "cnts = cv2.findContours(gray, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)[1]\n",
+        "\n",
+        "for pt in cnts:\n",
+        "  x, y, w, h = cv2.boundingRect(pt)\n",
+        "  #print(x, y, w, h)\n",
+        "  #cv2.rectangle(img, (x, y), (x+w, y+h), (0, 255, 0), 30)\n",
+        "\n",
+        "imgC = img[x+25:h-25, y+25:w-25]\n",
+        "imgDATA = cv2.resize(imgC, (900, 900))\n",
+        "\n",
+        "y = 2\n",
+        "x = 9\n",
+        "\n",
+        "#ここが変数になる\n",
+        "contoursY1 = y * 100\n",
+        "contoursY2 = contoursY1 + 100\n",
+        "contoursX1 = x * 100\n",
+        "contoursX2 = contoursX1 + 100\n",
+        "#ここが幅のパラメーター\n",
+        "contours = 20\n",
+        "\n",
+        "img29 = imgDATA[contoursY1 + 5 + contours:contoursY2 + 5 - contours,\n",
+        "                contoursX1 + 2 + contours:contoursX2 + 2 - contours]\n",
+        "\n",
+        "#二値化\n",
+        "img29 = cv2.threshold(img29,180,255,cv2.THRESH_BINARY)[1] \n",
+        "\n",
+        "#plt.axis(\"off\")\n",
+        "plt.imshow(cv2.cvtColor(img29, cv2.COLOR_BGR2RGB))\n",
+        "plt.show()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "error",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-43-b0d9808dc6d8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;31m#plt.axis(\"off\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcvtColor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg29\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCOLOR_BGR2RGB\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31merror\u001b[0m: OpenCV(3.4.3) /io/opencv/modules/imgproc/src/color.cpp:181: error: (-215:Assertion failed) !_src.empty() in function 'cvtColor'\n"
+          ]
+        }
+      ]
     }
   ]
 }
